fix(security): resolve CORS duplication and hardcoded redirects